--- a/package.json
+++ b/package.json
@@ -13,9 +13,12 @@
     "next": "^14.2.3",
     "react": "^18",
     "react-dom": "^18",
+    "redis": "^4.6.13",
     "use-debounce": "^10.0.0"
   },
   "devDependencies": {
+    "@types/node": "20.12.7",
+    "@types/react": "18.3.1",
     "eslint": "^8",
     "eslint-config-next": "14.2.3",
     "postcss": "^8",
