--- a/package.json
+++ b/package.json
@@ -15,6 +15,8 @@
     "@mui/material": "^5.15.15",
     "axios": "^1.6.8",
     "dotenv": "^16.4.5",
+    "js-cookie": "^3.0.5",
+    "jsonwebtoken": "^9.0.2",
     "next": "^14.2.3",
     "react": "^18",
     "react-dom": "^18",
