--- a/package.json
+++ b/package.json
@@ -13,8 +13,13 @@
     "@emotion/styled": "^11.11.5",
     "@mui/icons-material": "^5.15.15",
     "@mui/material": "^5.15.15",
+    "@nextui-org/react": "^2.3.6",
     "axios": "^1.6.8",
     "dotenv": "^16.4.5",
+    "framer-motion": "^11.1.7",
+    "js-cookie": "^3.0.5",
+    "jsonwebtoken": "^9.0.2",
+    "mongodb": "^6.6.0",
     "next": "^14.2.3",
     "react": "^18",
     "react-dom": "^18",
