--- a/package.json
+++ b/package.json
@@ -11,9 +11,11 @@
   "dependencies": {
     "@emotion/react": "^11.11.4",
     "@emotion/styled": "^11.11.5",
+    "@googlemaps/js-api-loader": "^1.16.6",
     "@mui/icons-material": "^5.15.15",
     "@mui/material": "^5.15.15",
     "@nextui-org/react": "^2.3.6",
+    "@react-google-maps/api": "^2.19.3",
     "axios": "^1.6.8",
     "dotenv": "^16.4.5",
     "framer-motion": "^11.1.7",
