--- a/package.json
+++ b/package.json
@@ -17,11 +17,13 @@
     "@nextui-org/react": "^2.3.6",
     "@react-google-maps/api": "^2.19.3",
     "axios": "^1.6.8",
+    "crypto-js": "^4.2.0",
     "dotenv": "^16.4.5",
     "framer-motion": "^11.1.7",
     "js-cookie": "^3.0.5",
     "jsonwebtoken": "^9.0.2",
     "mongodb": "^6.6.0",
+    "mongodb-client-encryption": "^6.0.0",
     "next": "^14.2.3",
     "react": "^18",
     "react-dom": "^18",
