--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@mui/material": "^5.15.15",
     "@nextui-org/react": "^2.3.6",
     "@react-google-maps/api": "^2.19.3",
+    "@supabase/supabase-js": "^2.43.4",
     "axios": "^1.6.8",
     "crypto-js": "^4.2.0",
     "dotenv": "^16.4.5",
