--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "next": "^14.2.3",
     "react": "^18",
     "react-dom": "^18",
+    "react-hot-toast": "^2.4.1",
     "redis": "^4.6.13",
     "swiper": "^11.1.1",
     "use-debounce": "^10.0.0"
