--- a/package.json
+++ b/package.json
@@ -15,6 +15,8 @@
     "@mui/icons-material": "^5.15.15",
     "@mui/material": "^5.15.15",
     "@nextui-org/react": "^2.3.6",
+    "@quillforms/react-renderer-utils": "^5.11.0",
+    "@quillforms/renderer-core": "^5.9.0",
     "@react-google-maps/api": "^2.19.3",
     "@supabase/supabase-js": "^2.43.4",
     "axios": "^1.6.8",
@@ -25,9 +27,9 @@
     "jsonwebtoken": "^9.0.2",
     "mongodb": "^6.6.0",
     "mongodb-client-encryption": "^6.0.0",
-    "next": "^14.2.3",
-    "react": "^18",
-    "react-dom": "^18",
+    "next": "^14.2.5",
+    "react": "^18.3.1",
+    "react-dom": "^18.3.1",
     "react-hot-toast": "^2.4.1",
     "redis": "^4.6.13",
     "swiper": "^11.1.1",
