--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "next dev -p 80 ",
+    "dev": "next dev   ",
     "build": "next build",
     "start": "next start",
     "lint": "next lint"
@@ -19,11 +19,14 @@
     "@quillforms/react-renderer-utils": "^5.11.0",
     "@quillforms/renderer-core": "^5.9.0",
     "@react-google-maps/api": "^2.19.3",
+    "@react-oauth/google": "^0.12.1",
     "@supabase/supabase-js": "^2.43.4",
     "axios": "^1.6.8",
+    "bcryptjs": "^2.4.3",
     "crypto-js": "^4.2.0",
     "dotenv": "^16.4.5",
     "framer-motion": "^11.1.7",
+    "jose": "^5.9.6",
     "js-cookie": "^3.0.5",
     "jsonwebtoken": "^9.0.2",
     "mongodb": "^6.6.0",
@@ -34,9 +37,12 @@
     "react-hot-toast": "^2.4.1",
     "redis": "^4.6.13",
     "swiper": "^11.1.1",
-    "use-debounce": "^10.0.0"
+    "use-debounce": "^10.0.0",
+    "validator": "^13.12.0"
   },
   "devDependencies": {
+    "@types/bcryptjs": "^2.4.6",
+    "@types/jsonwebtoken": "^9.0.8",
     "@types/node": "20.12.7",
     "@types/react": "18.3.1",
     "eslint": "^8",
